--- a/docs/lab/workflow/create-test.mdx
+++ b/docs/lab/workflow/create-test.mdx
@@ -9,7 +9,7 @@ Vital provides a way to create your own lab tests. These are made up of:
 3. The collection method (`testkit`, `walk_in_test`, `at_home_phlebotomy`).
 4. The sample type (`dried_blood_spot`, `serum`).
 
-Once a Lab test is created and approved, you can use it when making a order.
+Once a Lab Test is created and approved, you can use it when making a order.
 
 <Warning>
   When you create a Lab Test, it is not immediately available. We need to
