--- a/docs/lab/workflow/create-test.mdx
+++ b/docs/lab/workflow/create-test.mdx
@@ -4,10 +4,10 @@ title: "Creating a Lab Test (Beta)"
 
 Vital provides a way to create your own lab tests. These are made up of:
 
-1. One or more markers' ids.
-2. The lab id.
-3. The collection method (`testkit`, `walk_in_test`, `at_home_phlebotomy`).
-4. The sample type (`dried_blood_spot`, `serum`).
+1. One or more marker IDs.
+2. The lab ID.
+3. The collection method: `testkit`, `walk_in_test`, or `at_home_phlebotomy`.
+4. The sample type: `dried_blood_spot` or `serum`.
 
 Once a Lab Test is created and approved, you can use it when making a order.
 
