Fix response example

--- a/docs/api-reference/lab-testing/labs.mdx
+++ b/docs/api-reference/lab-testing/labs.mdx
@@ -13,7 +13,9 @@ openapi: "GET /v3/lab_tests/labs"
     "name": "LabCorp",
     "first_line_address": "123 Main St",
     "city": "San Francisco",
-    "zipcode": "91789"
+    "zipcode": "91789",
+    "collection_methods": ["at_home_phlebotomy", "walk_in_test"],
+    "sample_types": ["saliva", "serum"]
   }
 ]
 ```
