--- a/docs/event-catalog/labtest.order.updated.mdx
+++ b/docs/event-catalog/labtest.order.updated.mdx
@@ -71,13 +71,16 @@ The Vital Test associated with the order
 <Expandable title="LabTestSampleType" defaultOpen="true">
 </Expandable>
 </ResponseField>
-<ResponseField name="method" type="LabTestMethod" required="true">
-<Expandable title="LabTestMethod" defaultOpen="true">
+<ResponseField name="method" type="LabTestCollectionMethod" required="true">
+<Expandable title="LabTestCollectionMethod" defaultOpen="true">
 </Expandable>
 </ResponseField>
 <ResponseField name="price" type="number" required="true">
 </ResponseField>
 <ResponseField name="is_active" type="boolean" required="true">
+</ResponseField>
+<ResponseField name="fasting" type="boolean | null">
+Defines whether a lab test requires fasting. Only available for Labcorp.
 </ResponseField>
 <ResponseField name="lab" type="ClientFacingLab | null">
 <Expandable title="ClientFacingLab" defaultOpen="true">
@@ -92,6 +95,14 @@ The Vital Test associated with the order
 <ResponseField name="city" type="string" required="true">
 </ResponseField>
 <ResponseField name="zipcode" type="string" required="true">
+</ResponseField>
+<ResponseField name="collection_methods" type="LabTestCollectionMethod[]" required="true">
+<Expandable title="Item Schema: LabTestCollectionMethod" defaultOpen="true">
+</Expandable>
+</ResponseField>
+<ResponseField name="sample_types" type="LabTestSampleType[]" required="true">
+<Expandable title="Item Schema: LabTestSampleType" defaultOpen="true">
+</Expandable>
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -217,14 +228,14 @@ When your order was last updated
 </ResponseField>
 <ResponseField name="created_at" type="string" required="true">
 </ResponseField>
-<ResponseField name="status" type="OrderV2Status" required="true">
-<Expandable title="OrderV2Status" defaultOpen="true">
+<ResponseField name="status" type="OrderStatus" required="true">
+<Expandable title="OrderStatus" defaultOpen="true">
 </Expandable>
 </ResponseField>
 </Expandable>
 </ResponseField>
-<ResponseField name="status" type="OrderV2TopLevelStatus | null">
-<Expandable title="OrderV2TopLevelStatus" defaultOpen="true">
+<ResponseField name="status" type="OrderTopLevelStatus | null">
+<Expandable title="OrderTopLevelStatus" defaultOpen="true">
 </Expandable>
 </ResponseField>
 <ResponseField name="physician" type="PhysicianClientFacing | null">
@@ -243,6 +254,9 @@ Vital ID of the health insurance.
 <ResponseField name="requisition_form_url" type="string | null">
 Requistion form url.
 </ResponseField>
+<ResponseField name="priority" type="boolean | null">
+Defines whether order is priority or not. Only available for Labcorp. For Labcorp, this corresponds to a STAT order.
+</ResponseField>
 </Expandable>
 </ResponseField>
 # Examples
@@ -251,9 +265,9 @@ Requistion form url.
 {
   "event_type": "labtest.order.updated",
   "data": {
-    "id": "95695249-3a3d-4d03-8f9e-ae80f017590b",
-    "team_id": "82aa93d1-4a00-41f1-a677-f15eb9d49813",
-    "user_id": "51edb7f1-f77d-462a-b322-e8f4a93d7b28",
+    "id": "2b756027-586a-4591-8530-7c454554172f",
+    "team_id": "29de79ad-b301-4eaf-b726-9096b91fa6ae",
+    "user_id": "acc7cfc1-10f0-45cd-be86-2c19e49b895a",
     "patient_details": {
       "dob": "2020-01-01",
       "gender": "male"
@@ -294,7 +308,7 @@ Requistion form url.
       "method": "testkit"
     },
     "sample_id": "123456789",
-    "health_insurace_id": "d0a95372-446a-4ac7-ab0a-fef8808874e6",
+    "health_insurace_id": "2176d272-bd03-434c-9423-aaccb5425f0e",
     "requisition_form_url": "https://www.example.com",
     "notes": "This is a note",
     "created_at": "2020-01-01T00:00:00Z",
