--- a/docs/lab/overview/introduction.mdx
+++ b/docs/lab/overview/introduction.mdx
@@ -28,7 +28,7 @@ You can sign-up today to our sandbox environment. The [quickstart](/lab/overview
 
 As a first step, we need to define what type of testing you want to offer to your users. We will have an introduction call to go over the test, projected volumes, customizations for kits and other questions you might have. Once we have all this information, we will begin setting up the test kits for distribution. Once the integration is complete, you will have access to the dashboard to start ordering tests via our API.
 
-In [this page](https://tryvital.io/testing), you can check out some examples of the test panels we offer, and book an introductory call with us.
+In [this page](https://tryvital.io/labs), you can check out some examples of the test panels we offer, and book an introductory call with us.
 
 ### Support
 
