feat: add lacking documentation for fasting and insurance form additional info (#108)
* feat: add lacking documentation for fasting and insurance form additional info

* fix: remove wrong fasting parameter in python client

--- a/docs/api-reference/lab-testing/post-test.mdx
+++ b/docs/api-reference/lab-testing/post-test.mdx
@@ -16,7 +16,7 @@ data = client.LabTests.create_test(
   lab_id=5,
   method="testkit",
   sample_type="dried_blood_spot",
-  markers=[160],
+  markers=[160]
 )
 
 ```
@@ -34,6 +34,7 @@ data = client.LabTests.create_test(
     "method": "testkit",
     "price": 10.0,
     "is_active": false,
+    "fasting": false,
     "lab": {
       "slug": "USSL",
       "name": "US Specialty Lab",
