Remove https:// to prevent 404s on indexing

--- a/docs/home/environments.mdx
+++ b/docs/home/environments.mdx
@@ -6,10 +6,10 @@ When you sign up to Vital you get access to two environments, Sandbox and Produc
 
 | Environment URLs |                                    |
 | ---------------- | ---------------------------------- |
-| `production`     | https://api.tryvital.io            |
-| `production-eu`  | https://api.eu.tryvital.io         |
-| `sandbox`        | https://api.sandbox.tryvital.io    |
-| `sandbox-eu`     | https://api.sandbox.eu.tryvital.io |
+| `production`     | api.tryvital.io                    |
+| `production-eu`  | api.eu.tryvital.io                 |
+| `sandbox`        | api.sandbox.tryvital.io            |
+| `sandbox-eu`     | api.sandbox.eu.tryvital.io         |
 
 <br />
 <br />
