Remove https again

--- a/docs/home/quickstart.mdx
+++ b/docs/home/quickstart.mdx
@@ -5,7 +5,6 @@ description: "A quick introduction to building with Vital"
 
 ## 1. API keys
 
-
 Let's test out running Vital locally by cloning the [Quickstart app](https://github.com/tryVital/quickstart).
 You can get API keys by signing up in the [Dashboard](https://app.tryvital.io).
 Once registered, you can create a team. A team is associated with a region (either `EU` or `US`),
@@ -14,13 +13,12 @@ the region dictates where data is stored. You can learn more at [regions](/api-d
 To create a team and get your API keys, you first need to sign up for a Vital account in the [Dashboard](https://app.tryvital.io).
 
 Once registered, you can create a team by hovering over your username at the bottom of the Dashboard sidebar.
-A team is associated with a region (either `EU` or `US`), the region dictates where data is stored. 
+A team is associated with a region (either `EU` or `US`), the region dictates where data is stored.
 You can learn more at [regions](/api-details/regions).
 
-To create your API keys, go to the configuration section of the Dashboard. 
-For each region, you'll have access to two environments Sandbox and Production. 
-We'll start in the Sandbox environment, so create a new Sandbox API key. 
-
+To create your API keys, go to the configuration section of the Dashboard.
+For each region, you'll have access to two environments Sandbox and Production.
+We'll start in the Sandbox environment, so create a new Sandbox API key.
 
 <Note>
   If you get stuck at any point in the Quickstart, help is just a click away!
@@ -28,10 +26,10 @@ We'll start in the Sandbox environment, so create a new Sandbox API key.
   [support@tryvital.io](mailto:support@tryvital.io)
 </Note>
 
-| Environment  |                                             |                                 |
-| ------------ | ------------------------------------------- | ------------------------------- |
-| `sandbox`    | Testing, Connect up to 10 live users        | https://api.sandbox.tryvital.io |
-| `production` | Live environment to use with real customers | https://api.tryvital.io         |
+| Environment  |                                             |                         |
+| ------------ | ------------------------------------------- | ----------------------- |
+| `sandbox`    | Testing, Connect up to 10 live users        | api.sandbox.tryvital.io |
+| `production` | Live environment to use with real customers | api.tryvital.io         |
 
 ## 2. Running Quickstart locally
 
@@ -284,7 +282,6 @@ You can also download our [API collection](https://www.getpostman.com/collection
 Congratulations, you have completed the Vital Quickstart!
 
 There are a few directions you can go in now:
-
 
 <Card
   title="Vital Link"
