--- a/docs/lab/workflow/order-requirements.mdx
+++ b/docs/lab/workflow/order-requirements.mdx
@@ -4,19 +4,19 @@ title: "Order Requirements"
 
 ### Consents
 
-When you order a test through our API, you'll need to collect consents from the patient and forward it to us. The following consents are required:
-
+When you order a lab test through our API, you may have to collect consents from the patient and forward it to us. The following consents may include:
 * `hipaa-authorization`.
 * `terms-of-use`.
 * `telehealth-informed-consent`.
 
 ### Physician
 
-As mentioned [in the introduction](/lab/overview/introduction#features), you don't need to have your own Physician to place orders with Vital. When you [order a test](/lab/overview/quickstart#3-placing-an-order), you can pass an optional `physician` argument. If provided, the order will make use of your own physician. If not provided, your order will go through with a physican from our own network. For more information, do not hesitate to head over [our testing page](https://tryvital.io/labs) and book an introductory call with us.
+As mentioned [in the introduction](/lab/overview/introduction#features), you don't need to have your own Physician to place orders with Vital. When you [order a test](/lab/overview/quickstart#3-placing-an-order), you can pass an optional `physician` argument. If provided, the order will make use of your own physician. If not provided, your order will go through with a physician from our own network. For more information, do not hesitate to head over [our testing page](https://tryvital.io/labs) and book an introductory call with us.
 
 ### Health insurance (Beta)
 
-When you [order a test](/lab/overview/quickstart#3-placing-an-order), you can pass an optional `health_insurance` argument to signal that this order should use Health Insurance as the billing method. Sometimes a private `physician` may also be needed depending on the lab partner.
+When you [order a test](/lab/overview/quickstart#3-placing-an-order), you can pass an optional `health_insurance` argument to signal that this order should use Health Insurance as the billing method. 
+Depending on the lab parter, a private `physician` may be needed for the order. 
 Currently, we support Health Insurance orders for two of our partner labs, described in the following subsections:
 
 #### Spiriplex
@@ -24,9 +24,9 @@ Currently, we support Health Insurance orders for two of our partner labs, descr
 For placing insurance orders with Spiriplex, you will need some pre-requisites:
 
 - A physician capable of signing a requisition form. We currently don't support insurance orders using our own private physician network.
-- An image of the front and back of the Patient insurance card
-- An image of the Patient signature
-- Information about the patient reported symptoms and Physician assesment and treatment plan
+- A clear, legible image of the front and back of the Patient insurance card
+- A clear, legible image of the Patient signature
+- Information about the patient reported symptoms, and physician assessment and treatment plan
 
 You can provide this information in our API, using the `physician` and `health_insurance` arguments for the [POST v3/order/](/api-reference/lab-testing/create-order) REST endpoint.
 
@@ -67,17 +67,18 @@ You can provide this information in our API, using the `physician` and `health_i
 }
 ```
 
-After you place an order with the correct information, a requisition form will be generated and sent to Spiriplex with the necessary information so that you customer Health Insurance is correctly billed by Spiriplex.
-
+After you place an order with all the required information, a requisition form will be generated and sent to Spiriplex
+with the necessary information so your customer’s Health Insurance can be billed by Spiriplex.
 #### Labcorp
 
-To place an Order with Health Insurance as the billing method in Labcorp, you can use the `health_insurance` argument for the [POST v3/order/](/api-reference/lab-testing/create-order) REST endpoint, providing the following required information:
+To place an Order with Health Insurance as the billing method in Labcorp, you can use the `health_insurance` argument 
+for the [POST v3/order/](/api-reference/lab-testing/create-order) REST endpoint, providing the following required information:
 
 - An image of the front and back of the Patient insurance card
 - Payor Code - A unique code representing a specific Health Insurance company. You can query a specific Payor Code using the [Search Payor route](/api-reference/lab-testing-insurance/search-payor)
 - Insurance ID - A unique alphanumerical number representing the patient contract with the Health Insurance company. Usually found in the patient's insurance card.
-- Responsible Relationship - The relationship for the Insurance owner and the patient. The values are (Self, Spouse, Other Relationship). If the relationship is different from "Self", the Responsible Details field must be provided.
-- Responsible Details - An object with specific information about the responsible, containing the Responsbile Phone Number, Name and Address.
+- Responsible Relationship - The relationship between the Insurance owner and the patient. The values are (Self, Spouse, Other Relationship). If the relationship is different from "Self", the Responsible Details field must be provided.
+- Responsible Details - An object with specific information about the responsible, containing the Responsible Party’s Phone Number, Name and Address.
 - Diagnosis Codes - A list of Diagnosis Codes names, you can search for adequate diagnosis using the [Search Diagnosis Code route](/api-reference/lab-testing-insurance/search-diagnosis)
 
 The `health_insurance` object should look like this:
@@ -114,4 +115,4 @@ The `health_insurance` object should look like this:
 }
 ```
 
-After you place the order, the information will be fowarded to Labcorp and a Requisition form will be generated, succesfully placing an order with Health Insurance billing.
+A successful order will be created after the information is sent to Labcorp and a requisition form will be generated.
