--- a/docs/lab/workflow/order-requirements.mdx
+++ b/docs/lab/workflow/order-requirements.mdx
@@ -22,14 +22,14 @@ Currently, we support Health Insurance orders for two of our partner labs, descr
 
 #### Spiriplex
 
-For placing insurance orders with Spiriplex, you will need some pre-requisites:
+For placing insurance orders with Spiriplex, you need the following:
 
 - A physician capable of signing a requisition form. We currently don't support insurance orders using our own private physician network.
-- A clear, legible image of the front and back of the Patient insurance card
-- A clear, legible image of the Patient signature
-- Information about the patient reported symptoms, and physician assessment and treatment plan
+- A clear, legible image of the front and back of the Patient insurance card.
+- A clear, legible image of the Patient signature.
+- Information about the patient reported symptoms, and physician assessment and treatment plan.
 
-You can provide this information in our API, using the `physician` and `health_insurance` arguments for the [POST v3/order/](/api-reference/lab-testing/create-order) REST endpoint.
+You can provide this information with our API, using the `physician` and `health_insurance` arguments for the [POST v3/order/](/api-reference/lab-testing/create-order) REST endpoint.
 
 ```json Health Insurance
 {
@@ -68,19 +68,20 @@ You can provide this information in our API, using the `physician` and `health_i
 }
 ```
 
-After you place an order with all the required information, a requisition form will be generated and sent to Spiriplex
-with the necessary information so your customer’s Health Insurance can be billed by Spiriplex.
+After you place an order with all the required information, a requisition form is generated and sent to Spiriplex
+with all the necessary information. Your customer’s Health Insurance can then be billed by Spiriplex.
+
 #### Labcorp
 
 To place an Order with Health Insurance as the billing method in Labcorp, you can use the `health_insurance` argument 
-for the [POST v3/order/](/api-reference/lab-testing/create-order) REST endpoint, providing the following required information:
+for the [POST v3/order/](/api-reference/lab-testing/create-order) REST endpoint, by providing:
 
-- A clear, legible image of the front and back of the Patient insurance card
-- Payor Code - A unique code representing a specific Health Insurance company. You can query a specific Payor Code using the [Search Payor route](/api-reference/lab-testing-insurance/search-payor)
+- A clear, legible image of the front and back of the Patient insurance card.
+- Payor Code - A unique code representing a specific Health Insurance company. You can query a specific Payor Code using the [Search Payor endpoint](/api-reference/lab-testing-insurance/search-payor).
 - Insurance ID - A unique alphanumerical number representing the patient contract with the Health Insurance company. Usually found in the patient's insurance card.
-- Responsible Relationship - The relationship between the Insurance owner and the patient. The values are (Self, Spouse, Other Relationship). If the relationship is different from "Self", the Responsible Details field must be provided.
+- Responsible Relationship - The relationship between the Insurance owner and the patient. The values are (`Self`, `Spouse`, `Other Relationship`). If the relationship is different from `Self`, the Responsible Details field must be provided.
 - Responsible Details - An object with specific information about the responsible, containing the Responsible Party’s Phone Number, Name and Address.
-- Diagnosis Codes - A list of Diagnosis Codes names, you can search for adequate diagnosis using the [Search Diagnosis Code route](/api-reference/lab-testing-insurance/search-diagnosis)
+- Diagnosis Codes - A list of Diagnosis Codes names, you can search for adequate diagnosis using the [Search Diagnosis Code endpoint](/api-reference/lab-testing-insurance/search-diagnosis).
 
 The `health_insurance` object should look like this:
 
@@ -95,21 +96,21 @@ The `health_insurance` object should look like this:
          "content": "base64-encoded insurance back image binary content",
          "content_type": "image/png"
     },
-    "payor_code": "12345",
-    "diagnosis_codes": ["123", "321"],
+    "payor_code": "SGEXS",
+    "diagnosis_codes": ["D55.0"],
     "insurance_id": "12345",
     "responsible_relationship": "Spouse",
     "responsible_details": {
-                "first_name": "first",
-                "last_name": "last",
+                "first_name": "John",
+                "last_name": "Doe",
                 "phone_number": "+11234567890",
                 "phone_type": "Mobile",
                 "address": {
-                    "first_line": "address 123",
-                    "country": "US",
-                    "zip": "12345",
-                    "city": "Cheyenne",
-                    "state": "Wyoming"
+                    "first_line": "3577 Berkshire Circle",
+                    "country": "USA",
+                    "zip": "37917",
+                    "city": "Knoxville",
+                    "state": "Tennessee"
                 }
             }
   }
