review: Apply suggestions

--- a/docs/lab/workflow/order-requirements.mdx
+++ b/docs/lab/workflow/order-requirements.mdx
@@ -117,4 +117,4 @@ The `health_insurance` object should look like this:
 }
 ```
 
-A successful order will be created after the information is sent to Labcorp and a requisition form will be generated.
+A successful order is created after the information is sent to Labcorp and a requisition form is generated.
