--- a/docs/api-reference/sleep/get-raw.mdx
+++ b/docs/api-reference/sleep/get-raw.mdx
@@ -13,11 +13,11 @@ curl --request GET \
 ```
 
 ```js JavaScript
-data = await client.Sleep.getRaw(sleep_id=*)
+data = await client.Sleep.getRaw(user_id=*)
 ```
 
 ```python Python
-data = client.Sleep.get_raw(sleep_id=*)
+data = client.Sleep.get_raw(user_id=*)
 ```
 
 </RequestExample>
