Activity response update - heart_rate example

--- a/docs/api-reference/activity/get-summary.mdx
+++ b/docs/api-reference/activity/get-summary.mdx
@@ -45,11 +45,17 @@ data = client.Activity.get(
       "medium": 6400,
       "high": 6000,
       "source": {
-        "name": "Oura",
-        "slug": "oura",
+        "name": "Garmin",
+        "slug": "garmin",
         "logo": "https://logo_url.com"
       },
-      "user_id": "70c64d5a-ff06-4c16-b137-361b2441d86e"
+      "user_id": "70c64d5a-ff06-4c16-b137-361b2441d86e",
+      "heart_rate": {
+        "avg_bpm": 76.4,
+        "max_bpm": 134,
+        "min_bpm": 55,
+        "resting_bpm": 60
+      }
     }
   ]
 }
