Add docs for registrable testkit flow

--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -58,6 +58,8 @@ Below is a full list of all the available statuses by test modality. The names s
 ### Test-kit statuses
 
 - `received.testkit.ordered`
+- `received.testkit.awaiting_registration`
+- `received.testkit.testkit_registered`
 - `received.testkit.requisition_created`
 - `collecting_sample.testkit.transit_customer`
 - `collecting_sample.testkit.out_for_delivery`
